[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/interface/MenuBoard.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ui/SaveMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/interface/MenuButton.tscn" type="PackedScene" id=3]

[node name="SaveMenu" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VSplitContainer" type="VSplitContainer" parent="Background/MarginContainer" index="0"]
margin_right = 1840.0
margin_bottom = 1000.0
dragger_visibility = 2

[node name="Control" type="Control" parent="Background/MarginContainer/VSplitContainer" index="0"]
margin_right = 1840.0

[node name="HSplitContainer" type="HSplitContainer" parent="Background/MarginContainer/VSplitContainer" index="1"]
margin_right = 1840.0
margin_bottom = 1000.0
split_offset = 1500

[node name="VSplitContainer" type="VSplitContainer" parent="Background/MarginContainer/VSplitContainer/HSplitContainer" index="0"]
margin_right = 1558.0
margin_bottom = 1000.0

[node name="NewSaveName" type="LineEdit" parent="Background/MarginContainer/VSplitContainer/HSplitContainer/VSplitContainer" index="0"]
margin_right = 1558.0
margin_bottom = 24.0
focus_mode = 1
focus_mode = 1
placeholder_text = "Save name"

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/VSplitContainer/HSplitContainer/VSplitContainer" index="1"]
margin_top = 36.0
margin_right = 1558.0
margin_bottom = 1000.0
scroll_horizontal_enabled = false

[node name="SaveButtonsContainer" type="VBoxContainer" parent="Background/MarginContainer/VSplitContainer/HSplitContainer/VSplitContainer/ScrollContainer" index="0"]
custom_constants/separation = 19

[node name="Control" type="Control" parent="Background/MarginContainer/VSplitContainer/HSplitContainer" index="1"]
margin_left = 1570.0
margin_right = 1840.0
margin_bottom = 1000.0

[node name="SaveButton" parent="Background/MarginContainer/VSplitContainer/HSplitContainer/Control" index="0" instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -25.0
margin_right = 0.0
margin_bottom = 0.0
disabled = true
text = "Save Game"
[connection signal="visibility_changed" from="." to="." method="_on_SaveMenu_visibility_changed"]
[connection signal="text_changed" from="Background/MarginContainer/VSplitContainer/HSplitContainer/VSplitContainer/NewSaveName" to="." method="_on_NewSaveName_text_changed"]
[connection signal="pressed" from="Background/MarginContainer/VSplitContainer/HSplitContainer/Control/SaveButton" to="." method="_on_SaveButton_pressed"]
